labs/lab4/error.txt
/home/admin228/os_labs/labs/lab4/temperature_monitor/temperature_monitor.cpp: In member function ‘bool TemperatureMonitor::startReadingFromCOMPort()’:
/home/admin228/os_labs/labs/lab4/temperature_monitor/temperature_monitor.cpp:22:29: error: ‘make_unique’ is not a member of ‘std’
   22 |         serial_port_ = std::make_unique<cplib::SerialPort>();
      |                             ^~~~~~~~~~~
/home/admin228/os_labs/labs/lab4/temperature_monitor/temperature_monitor.cpp:22:29: note: ‘std::make_unique’ is only available from C++14 onwards
/home/admin228/os_labs/labs/lab4/temperature_monitor/temperature_monitor.cpp:22:58: error: expected primary-expression before ‘>’ token
   22 |         serial_port_ = std::make_unique<cplib::SerialPort>();
      |                                                          ^
/home/admin228/os_labs/labs/lab4/temperature_monitor/temperature_monitor.cpp:22:60: error: expected primary-expression before ‘)’ token
   22 |         serial_port_ = std::make_unique<cplib::SerialPort>();
      |                                                            ^
make[2]: *** [CMakeFiles/temperature_monitor.dir/build.make:79: CMakeFiles/temperature_monitor.dir/temperature_monitor/temperature_monitor.cpp.o] Ошибка 1
make[1]: *** [CMakeFiles/Makefile2:199: CMakeFiles/temperature_monitor.dir/all] Ошибка 2
make: *** [Makefile:91: all] Ошибка 2